# HyKiCT_Public_release

./: CMakeLists.txt  README.md  config.yml
apps/: CMakeLists.txt  main.cpp  operator_split_T.cpp
cmake-modules/: FindPETSc.cmake  GoogleTest-CMakeLists.txt.in  README
include/HyKiCT/: Data.hpp  EoS.hpp  ExtSource.h  FastMaths.hpp  FixedData.h  FluidDynamics.h  GrayRadTrans.h  GridData.h  IO.h  IdealGasEoS.h  Init.h  IntSource.h  Ionization.h  LoadInEoS.h  LoadInTables.h  MatrixSolver.h  MultiRadTrans.h  PhysicsThreads.hpp  PlasmaParameters.h  RadTrans.hpp  SNBSource.h  Switches.h  TimeStep.h  hypre_solver.hpp
scripts/: TimePlot.py
src/: CMakeLists.txt  Data.cpp  EoS.cpp  ExtSource.cpp  FixedData.cpp  FluidDynamics.cpp  GrayRadTrans.cpp  GridData.cpp  IO.cpp  IdealGasEoS.cpp  Init.cpp  IntSource.cpp  Ionization.cpp  LoadInEoS.cpp  LoadInTables.cpp  MatrixSolver.cpp  MultiRadTrans.cpp  PlasmaParameters.cpp  SNBSource.cpp  Switches.cpp  TimeStep.cpp  ctpl.cpp
tests/: CMakeLists.txt  ExtSourceTests.cpp  FluidDynamicsTests.cpp  GridDataTests.cpp  ImplicitRadiationTests.cpp  ImplicitRadiationTests.h  IntSourceTests.cpp  IntSourceTests.h  LoadInTablesTests.cpp  RadiationTests.cpp  RadiationTests.h  tests.cpp
tests/INTEGRATED_TESTS_INITS/ImplicitMGSuOlsenGray/: CELL_CENTRE_X_100.txt  ELECTRON_TEMPERATURE_100.txt  ELECTRON_TEMPERATURE_3163.txt  RAD_ENERGY_0_100.txt  RAD_ENERGY_0_3163.txt  RAD_ENERGY_DENSITY_100.txt  RAD_ENERGY_DENSITY_3163.txt
tests/INTEGRATED_TESTS_INITS/ImplicitMGSuOlsenVari/: ELECTRON_TEMPERATURE_100.txt  ELECTRON_TEMPERATURE_3300.txt  RAD_ENERGY_0_100.txt  RAD_ENERGY_0_3300.txt  RAD_ENERGY_1_100.txt  RAD_ENERGY_1_3300.txt  RAD_ENERGY_DENSITY_100.txt  RAD_ENERGY_DENSITY_3300.txt
tests/INTEGRATED_TESTS_INITS/LOAD_IN_HEAT_COMPONENT_CHECK/100/: Ar.txt  Z.txt  coord.txt  density.txt  electron_temperature.txt  mass.txt  qe.txt
tests/INTEGRATED_TESTS_INITS/LOAD_IN_HEAT_COMPONENT_CHECK/1000/: Ar.txt  Z.txt  coord.txt  density.txt  electron_temperature.txt  mass.txt  qe.txt
tests/INTEGRATED_TESTS_INITS/LOAD_IN_HEAT_COMPONENT_CHECK/10000/: Ar.txt  Z.txt  coord.txt  density.txt  electron_temperature.txt  mass.txt  qe.txt
tests/INTEGRATED_TESTS_INITS/LOAD_IN_HEAT_COMPONENT_CHECK/555/: Ar.txt  Z.txt  coord.txt  density.txt  electron_temperature.txt  mass.txt  qe.txt  velocity.txt
tests/INTEGRATED_TESTS_INITS/LOAD_LASER_TESTS/: exp_test_laser.txt  sin_test_laser.txt
tests/INTEGRATED_TESTS_INITS/LoadInTablesTest/: EoSTest_p1.txt  Rho.txt  Rossland.txt  Te.txt
tests/INTEGRATED_TESTS_INITS/MGSuOlsenGray/: ELECTRON_TEMPERATURE_100.txt  ELECTRON_TEMPERATURE_3163.txt  RAD_ENERGY_DENSITY_100.txt  RAD_ENERGY_DENSITY_3163.txt
tests/INTEGRATED_TESTS_INITS/MGSuOlsenVari/: ELECTRON_TEMPERATURE_100.txt  ELECTRON_TEMPERATURE_3300.txt  RAD_ENERGY_0_100.txt  RAD_ENERGY_0_3300.txt  RAD_ENERGY_1_100.txt  RAD_ENERGY_1_3300.txt
tests/INTEGRATED_TESTS_INITS/OLD_SNB_BRODRICK_RECREATE/: Ar.txt  coord.txt  density.txt  ion_temperature.txt  mass.txt  qe.txt
tests/INTEGRATED_TESTS_INITS/OPTITHINCHECK/: RAD_ENERGY_DENSITY_146.txt
tests/INTEGRATED_TESTS_INITS/SNB_BRODRICK_RECREATE/: Te.txt  Z.txt  ne.txt  qe_avg.txt  qe_sep.txt
tests/INTEGRATED_TESTS_INITS/SNB_MULTIPLIER_RECREATER_CHECK/: qe.txt
tests/INTEGRATED_TESTS_INITS/SNB_SUBTRACT_RECREATER_CHECK/: qe.txt
tests/INTEGRATED_TESTS_INITS/SOD_SHOCKTUBE/: PT.txt  coord.txt  rho.txt  velocity.txt
tests/INTEGRATED_TESTS_INITS/VFP_DivQ/: qe.txt
tests/INTEGRATED_TESTS_INITS/VFP_HEAT_FLOW_RECREATER_CHECK/: front_heat_fit_param.txt  pre_heat_fit_param.txt  qe.txt
tests/INTEGRATED_TESTS_INITS/VFP_SUBTRACT/: qe.txt
